build based on eaea68c

--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,74 +24,74 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-a4c9df90">
+     id="img-7f5dedc2">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-a4c9df90-1">
-  <g transform="translate(114.39,81.15)">
-    <path fill="none" d="M-14.05,-9.69 L 14.05 9.69" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-7f5dedc2-1">
+  <g transform="translate(115.1,80.12)">
+    <path fill="none" d="M-13.42,-10.67 L 13.42 10.67" class="primitive"/>
   </g>
-  <g transform="translate(96.04,49.32)">
-    <path fill="none" d="M0.26,15.45 L -0.26 -15.45" class="primitive"/>
+  <g transform="translate(102.14,48.92)">
+    <path fill="none" d="M-3.24,13.7 L 3.24 -13.7" class="primitive"/>
   </g>
-  <g transform="translate(69.72,68.89)">
-    <path fill="none" d="M21.07,-0.15 L -21.07 0.15" class="primitive"/>
+  <g transform="translate(69.43,64.52)">
+    <path fill="none" d="M23.01,1.6 L -23.01 -1.6" class="primitive"/>
   </g>
-  <g transform="translate(80.79,21.51)">
-    <path fill="none" d="M-13.82,-10.32 L 13.82 10.32" class="primitive"/>
+  <g transform="translate(91.92,22.26)">
+    <path fill="none" d="M-12.68,-10.89 L 12.68 10.89" class="primitive"/>
   </g>
-  <g transform="translate(39.56,11.9)">
-    <path fill="none" d="M18.13,-2.74 L -18.13 2.74" class="primitive"/>
+  <g transform="translate(49.67,9.57)">
+    <path fill="none" d="M20.48,-0.97 L -20.48 0.97" class="primitive"/>
   </g>
-  <g transform="translate(30.82,58.55)">
-    <path fill="none" d="M-14.93,-9.7 L 14.93 9.7" class="primitive"/>
+  <g transform="translate(29.62,51.67)">
+    <path fill="none" d="M-13.98,-10.28 L 13.98 10.28" class="primitive"/>
   </g>
-  <g transform="translate(16.14,29.19)">
-    <path fill="none" d="M-3.36,13.13 L 3.36 -13.13" class="primitive"/>
+  <g transform="translate(20.37,23.31)">
+    <path fill="none" d="M-6.53,11.59 L 6.53 -11.59" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-a4c9df90-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-7f5dedc2-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-a4c9df90-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-7f5dedc2-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-a4c9df90-4">
-  <g transform="translate(96.36,68.7)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-7f5dedc2-4">
+  <g transform="translate(97.98,66.51)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(63.14,8.33)" fill="#2E8B57">
+  <g transform="translate(75.71,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,46.19)" fill="#2E8B57">
+  <g transform="translate(11.79,38.55)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
   <g transform="translate(129.64,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(95.76,32.69)" fill="#00CDCD">
+  <g transform="translate(105.66,34.06)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(46.98,69.05)" fill="#00CDCD">
+  <g transform="translate(44.75,62.8)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(19.8,14.89)" fill="#00CDCD">
+  <g transform="translate(27.52,10.62)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-a4c9df90-5">
-  <g transform="translate(96.36,68.7)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-7f5dedc2-5">
+  <g transform="translate(97.98,66.51)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(63.14,8.33)">
+  <g transform="translate(75.71,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(11.79,46.19)">
+  <g transform="translate(11.79,38.55)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
@@ -101,17 +101,17 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(95.76,32.69)">
+  <g transform="translate(105.66,34.06)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(46.98,69.05)">
+  <g transform="translate(44.75,62.8)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(19.8,14.89)">
+  <g transform="translate(27.52,10.62)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -288,15 +288,21 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
+┌ Warning: updateVariableSolverData! argument verbose is deprecated in favor of keyword argument `warn_if_absent`, see #643
+│   caller = doautoinit!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::DFGVariable{IncrementalInference.ContinuousScalar}; singles::Bool, N::Int64, logger::Logging.ConsoleLogger) at FactorGraph.jl:817
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/UUKBL/src/FactorGraph.jl:817
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
-└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:524
+└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:522
 [ Info: try doautoinit! of x1
 [ Info: try doautoinit! of l0
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
+┌ Warning: updateVariableSolverData! argument verbose is deprecated in favor of keyword argument `warn_if_absent`, see #643
+│   caller = doautoinit!(::LightDFG{IncrementalInference.SolverParams,DFGVariable,DFGFactor}, ::DFGVariable{IncrementalInference.ContinuousScalar}; singles::Bool, N::Int64, logger::Logging.ConsoleLogger) at FactorGraph.jl:817
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/UUKBL/src/FactorGraph.jl:817
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
-└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:524
+└ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:522
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
 [ Info: do init of x1
