--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-ea04e5ef">
+     id="img-25f8b05d">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-ea04e5ef-1">
-  <g transform="translate(116.04,20.1)">
-    <path fill="none" d="M-12.54,10.85 L 12.54 -10.85" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-25f8b05d-1">
+  <g transform="translate(25.77,80.43)">
+    <path fill="none" d="M12.88,-10.35 L -12.88 10.35" class="primitive"/>
   </g>
-  <g transform="translate(69.74,37.44)">
-    <path fill="none" d="M24.74,-2.82 L -24.74 2.82" class="primitive"/>
+  <g transform="translate(71.52,64.26)">
+    <path fill="none" d="M-23.68,2.33 L 23.68 -2.33" class="primitive"/>
   </g>
-  <g transform="translate(107.18,50.83)">
-    <path fill="none" d="M-5.6,-13.07 L 5.6 13.07" class="primitive"/>
+  <g transform="translate(38.67,49.25)">
+    <path fill="none" d="M2.86,13.98 L -2.86 -13.98" class="primitive"/>
   </g>
-  <g transform="translate(28.86,52)">
-    <path fill="none" d="M-13.38,10.66 L 13.38 -10.66" class="primitive"/>
+  <g transform="translate(111.9,50.61)">
+    <path fill="none" d="M13.89,-10.3 L -13.89 10.3" class="primitive"/>
   </g>
-  <g transform="translate(23.53,79.82)">
-    <path fill="none" d="M-8.94,-10.82 L 8.94 10.82" class="primitive"/>
+  <g transform="translate(121.22,22.13)">
+    <path fill="none" d="M6.4,11.67 L -6.4 -11.67" class="primitive"/>
   </g>
-  <g transform="translate(100.42,77.13)">
-    <path fill="none" d="M-11.84,11.16 L 11.84 -11.16" class="primitive"/>
+  <g transform="translate(49.1,22.29)">
+    <path fill="none" d="M12.48,-10.89 L -12.48 10.89" class="primitive"/>
   </g>
-  <g transform="translate(57.33,91.56)">
-    <path fill="none" d="M22.35,-0.1 L -22.35 0.1" class="primitive"/>
+  <g transform="translate(91.6,8.89)">
+    <path fill="none" d="M-20.94,-0.44 L 20.94 0.44" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-ea04e5ef-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-25f8b05d-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-ea04e5ef-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-25f8b05d-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-ea04e5ef-4">
-  <g transform="translate(99.97,34)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-25f8b05d-4">
+  <g transform="translate(42.33,67.13)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,65.6)" fill="#2E8B57">
+  <g transform="translate(129.64,37.47)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(85.25,91.43)" fill="#2E8B57">
+  <g transform="translate(65.09,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(129.64,8.33)" fill="#00CDCD">
+  <g transform="translate(11.79,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(43.35,40.45)" fill="#00CDCD">
+  <g transform="translate(96.86,61.77)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(113.26,65.03)" fill="#00CDCD">
+  <g transform="translate(35.57,34.1)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(33.32,91.67)" fill="#00CDCD">
+  <g transform="translate(114.22,9.36)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-ea04e5ef-5">
-  <g transform="translate(99.97,34)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-25f8b05d-5">
+  <g transform="translate(42.33,67.13)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(11.79,65.6)">
+  <g transform="translate(129.64,37.47)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(85.25,91.43)">
+  <g transform="translate(65.09,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(129.64,8.33)">
+  <g transform="translate(11.79,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(43.35,40.45)">
+  <g transform="translate(96.86,61.77)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(113.26,65.03)">
+  <g transform="translate(35.57,34.1)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(33.32,91.67)">
+  <g transform="translate(114.22,9.36)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -269,7 +269,9 @@ amount2:1-d})};a.filter.invert.toString=function(){return this()};a.filter.brigh
 addVariable!(dfg, :x2, ContinuousScalar);
 addFactor!(dfg, [:x1; :x2], LinearConditional(Normal(50.0,2.0)));
 # Save to SVG
-draw(SVG(&quot;graph.svg&quot;, 10cm, 10cm), dfgplot(dfg));</code></pre><p><img src="../graph.svg" alt/></p><h3><a class="nav-anchor" id="More-Information-1" href="#More-Information-1">More Information</a></h3><p>More information at <a href="https://github.com/JuliaGraphs/GraphPlot.jl">GraphPlot.jl</a></p><h2><a class="nav-anchor" id="Dot-Files-1" href="#Dot-Files-1">Dot Files</a></h2><p>Dot files are a standard format for visualizing graphs and applications such as xdot are available to view the files. Dot plotting does not require <code>GraphPlot</code> and can be drawn by either:</p><ul><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDot-Tuple{AbstractDFG}"><code>toDot</code></a> on any graph to produce a string of the graph</li><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDotFile"><code>toDotFile</code></a> on any graph to save it directly to a dotfile</li></ul><pre><code class="language-julia">using DistributedFactorGraphs
+draw(SVG(&quot;graph.svg&quot;, 10cm, 10cm), dfgplot(dfg));</code></pre><pre><code class="language-none">┌ Warning: `LinearConditional(x...)` is deprecated, use `LinearRelative(x...)` instead.
+│   caller = top-level scope at make.jl:6
+└ @ Core ~/build/JuliaRobotics/DistributedFactorGraphs.jl/docs/make.jl:6</code></pre><p><img src="../graph.svg" alt/></p><h3><a class="nav-anchor" id="More-Information-1" href="#More-Information-1">More Information</a></h3><p>More information at <a href="https://github.com/JuliaGraphs/GraphPlot.jl">GraphPlot.jl</a></p><h2><a class="nav-anchor" id="Dot-Files-1" href="#Dot-Files-1">Dot Files</a></h2><p>Dot files are a standard format for visualizing graphs and applications such as xdot are available to view the files. Dot plotting does not require <code>GraphPlot</code> and can be drawn by either:</p><ul><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDot-Tuple{AbstractDFG}"><code>toDot</code></a> on any graph to produce a string of the graph</li><li>Calling <a href="../func_ref/#DistributedFactorGraphs.toDotFile"><code>toDotFile</code></a> on any graph to save it directly to a dotfile</li></ul><pre><code class="language-julia">using DistributedFactorGraphs
 # Construct graph using IIF
 using IncrementalInference
 # Create graph
@@ -285,16 +287,29 @@ f1 = addFactor!(dfg, [:l0; :x1], LinearConditional(Normal(-10.0,5.0)), solvable=
 toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 # Open with xdot
 # run(`xdot /tmp/test.dot`)</code></pre><pre><code class="language-none">[ Info: try doautoinit! of x0
+┌ Warning: `LinearConditional(x...)` is deprecated, use `LinearRelative(x...)` instead.
+│   caller = top-level scope at make.jl:6
+└ @ Core ~/build/JuliaRobotics/DistributedFactorGraphs.jl/docs/make.jl:6
 [ Info: try doautoinit! of x0
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
+┌ Warning: findRelatedFromPotential likely to be deprecated, use `lsf` or `productbelief(fg, variableSym, ...) instead`
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/OyZSe/src/Deprecated.jl:48
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:522
 [ Info: try doautoinit! of x1
+┌ Warning: `LinearConditional(x...)` is deprecated, use `LinearRelative(x...)` instead.
+│   caller = top-level scope at make.jl:6
+└ @ Core ~/build/JuliaRobotics/DistributedFactorGraphs.jl/docs/make.jl:6
 [ Info: try doautoinit! of l0
+┌ Warning: `LinearConditional(x...)` is deprecated, use `LinearRelative(x...)` instead.
+│   caller = top-level scope at make.jl:6
+└ @ Core ~/build/JuliaRobotics/DistributedFactorGraphs.jl/docs/make.jl:6
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
+┌ Warning: findRelatedFromPotential likely to be deprecated, use `lsf` or `productbelief(fg, variableSym, ...) instead`
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/OyZSe/src/Deprecated.jl:48
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:522
 [ Info: try doautoinit! of x1
