build based on c66d555

--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ dfgplot(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-ed4f9bcd">
+     id="img-4fd439be">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-ed4f9bcd-1">
-  <g transform="translate(27.98,22.66)">
-    <path fill="none" d="M14.76,6.11 L -14.76 -6.11" class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-4fd439be-1">
+  <g transform="translate(27.6,58.39)">
+    <path fill="none" d="M14.16,-1.47 L -14.16 1.47" class="primitive"/>
   </g>
-  <g transform="translate(67.04,18.63)">
-    <path fill="none" d="M-15.31,9.52 L 15.31 -9.52" class="primitive"/>
+  <g transform="translate(62.7,75.2)">
+    <path fill="none" d="M-12.64,-15.44 L 12.64 15.44" class="primitive"/>
   </g>
-  <g transform="translate(56.79,54.37)">
-    <path fill="none" d="M-7.76,-19.82 L 7.76 19.82" class="primitive"/>
+  <g transform="translate(60.77,34.17)">
+    <path fill="none" d="M-11.29,18.57 L 11.29 -18.57" class="primitive"/>
   </g>
-  <g transform="translate(100.02,14.36)">
-    <path fill="none" d="M14.93,5.48 L -14.93 -5.48" class="primitive"/>
+  <g transform="translate(92.47,90.64)">
+    <path fill="none" d="M14.63,-0.92 L -14.63 0.92" class="primitive"/>
   </g>
-  <g transform="translate(125.07,44.56)">
-    <path fill="none" d="M-4.3,-19.01 L 4.3 19.01" class="primitive"/>
+  <g transform="translate(121.67,66.84)">
+    <path fill="none" d="M-7.51,18.74 L 7.51 -18.74" class="primitive"/>
   </g>
-  <g transform="translate(81.08,82.75)">
-    <path fill="none" d="M14.69,6.77 L -14.69 -6.77" class="primitive"/>
+  <g transform="translate(88.71,11.75)">
+    <path fill="none" d="M14.36,-2.48 L -14.36 2.48" class="primitive"/>
   </g>
-  <g transform="translate(116.22,77.11)">
-    <path fill="none" d="M-12.4,11.43 L 12.4 -11.43" class="primitive"/>
+  <g transform="translate(119.76,28.94)">
+    <path fill="none" d="M-9.27,-16.93 L 9.27 16.93" class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-ed4f9bcd-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-4fd439be-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-ed4f9bcd-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-4fd439be-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-ed4f9bcd-4">
-  <g transform="translate(47.55,30.76)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-4fd439be-4">
+  <g transform="translate(47.28,56.35)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(119.89,21.66)" fill="#2E8B57">
+  <g transform="translate(112.65,89.37)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(100.43,91.67)" fill="#2E8B57">
+  <g transform="translate(108.47,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,15.95)" fill="#00CDCD">
+  <g transform="translate(11.79,60.03)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(83.61,8.33)" fill="#00CDCD">
+  <g transform="translate(76.17,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(64.99,75.33)" fill="#00CDCD">
+  <g transform="translate(72.72,14.52)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,64.74)" fill="#00CDCD">
+  <g transform="translate(129.64,46.97)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-ed4f9bcd-5">
-  <g transform="translate(47.55,30.76)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-4fd439be-5">
+  <g transform="translate(47.28,56.35)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(119.89,21.66)">
+  <g transform="translate(112.65,89.37)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(100.43,91.67)">
+  <g transform="translate(108.47,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(11.79,15.95)">
+  <g transform="translate(11.79,60.03)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(83.61,8.33)">
+  <g transform="translate(76.17,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(64.99,75.33)">
+  <g transform="translate(72.72,14.52)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,64.74)">
+  <g transform="translate(129.64,46.97)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -294,7 +294,8 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: init with useinitfct [:x0f1]
 [ Info: do init of x0
 ┌ Warning: findRelatedFromPotential likely to be deprecated, use `lsf` or `productbelief(fg, variableSym, ...) instead`
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/OyZSe/src/Deprecated.jl:48
+│   caller = ip:0x0
+└ @ Core :-1
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:531
 [ Info: try doautoinit! of x1
@@ -309,7 +310,8 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
 ┌ Warning: findRelatedFromPotential likely to be deprecated, use `lsf` or `productbelief(fg, variableSym, ...) instead`
-└ @ IncrementalInference ~/.julia/packages/IncrementalInference/OyZSe/src/Deprecated.jl:48
+│   caller = ip:0x0
+└ @ Core :-1
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/build/JuliaRobotics/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:531
 [ Info: try doautoinit! of x1
