--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.039/juliamono-regular.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><script src="../../copy.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
+<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Drawing Graphs · DistributedFactorGraphs.jl</title><script data-outdated-warner src="../assets/warner.js"></script><link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/juliamono/0.039/juliamono-regular.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark" data-theme-primary-dark/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit"><a href="../">DistributedFactorGraphs.jl</a></span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li><span class="tocitem">Getting Started</span><ul><li><a class="tocitem" href="../DataStructure/">DFG Data Structures</a></li><li><a class="tocitem" href="../BuildingGraphs/">Building Graphs</a></li><li><a class="tocitem" href="../GraphData/">Using Graph Elements</a></li><li class="is-active"><a class="tocitem" href>Drawing Graphs</a><ul class="internal"><li><a class="tocitem" href="#GraphPlot"><span>GraphPlot</span></a></li><li><a class="tocitem" href="#Dot-Files"><span>Dot Files</span></a></li></ul></li><li><a class="tocitem" href="../ref_api/">Quick API Reference</a></li></ul></li><li><a class="tocitem" href="../func_ref/">Function Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li><a class="is-disabled">Getting Started</a></li><li class="is-active"><a href>Drawing Graphs</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Drawing Graphs</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/JuliaRobotics/DistributedFactorGraphs.jl/blob/master/docs/src/DrawingGraphs.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Drawing-Graphs"><a class="docs-heading-anchor" href="#Drawing-Graphs">Drawing Graphs</a><a id="Drawing-Graphs-1"></a><a class="docs-heading-anchor-permalink" href="#Drawing-Graphs" title="Permalink"></a></h1><p>Graphs can be visualized by using either <code>GraphPlot</code> or rendering to .dot files (which can be viewed using xdot).</p><h2 id="GraphPlot"><a class="docs-heading-anchor" href="#GraphPlot">GraphPlot</a><a id="GraphPlot-1"></a><a class="docs-heading-anchor-permalink" href="#GraphPlot" title="Permalink"></a></h2><p><code>GraphPlot</code> plotting is available if <code>GraphPlot</code> is imported before DFG is imported. Install <code>GraphPlot</code> using the following command:</p><pre><code class="language-julia hljs">using Pkg
 Pkg.add(&quot;GraphPlot&quot;)</code></pre><p>Then bring <code>GraphPlot</code> in before DFG:</p><pre><code class="language-julia hljs">using GraphPlot
 using DistributedFactorGraphs</code></pre><p>Any factor graph can then be drawn by calling <a href="../func_ref/#DistributedFactorGraphs.DFGPlots.plotDFG"><code>plotDFG</code></a>:</p><pre><code class="language-julia hljs"># Construct graph using IIF
 using IncrementalInference
@@ -24,94 +24,94 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-b0d55cf7">
+     id="img-767129ea">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-b0d55cf7-1">
-  <g transform="translate(91.05,50.76)">
-    <path fill="none" d="M2.77,-16.76 L-2.77,16.76 " class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-767129ea-1">
+  <g transform="translate(56.62,58.18)">
+    <path fill="none" d="M26.91,6.44 L-26.91,-6.44 " class="primitive"/>
   </g>
-  <g transform="translate(69.39,26.83)">
-    <path fill="none" d="M19.59,2.55 L-19.59,-2.55 " class="primitive"/>
+  <g transform="translate(110.76,53.8)">
+    <path fill="none" d="M-17.56,9.66 L17.56,-9.66 " class="primitive"/>
   </g>
-  <g transform="translate(113.52,18.3)">
-    <path fill="none" d="M-14.86,9.19 L14.86,-9.19 " class="primitive"/>
+  <g transform="translate(96.42,80.06)">
+    <path fill="none" d="M-5.64,-10.5 L5.64,10.5 " class="primitive"/>
   </g>
-  <g transform="translate(31.78,85.38)">
-    <path fill="none" d="M16.69,4.8 L-16.69,-4.8 " class="primitive"/>
+  <g transform="translate(36.57,16.39)">
+    <path fill="none" d="M-19.87,7.5 L19.87,-7.5 " class="primitive"/>
   </g>
-  <g transform="translate(72.27,79.23)">
-    <path fill="none" d="M-14.6,9.73 L14.6,-9.73 " class="primitive"/>
+  <g transform="translate(20.76,39.81)">
+    <path fill="none" d="M-6.68,-10.48 L6.68,10.48 " class="primitive"/>
   </g>
-  <g transform="translate(12.73,63.9)">
-    <path fill="none" d="M-0.75,-15.06 L0.75,15.06 " class="primitive"/>
+  <g transform="translate(86.17,12.59)">
+    <path fill="none" d="M26.63,4.01 L-26.63,-4.01 " class="primitive"/>
   </g>
-  <g transform="translate(31.49,33.62)">
-    <path fill="none" d="M-15.38,8.81 L15.38,-8.81 " class="primitive"/>
+  <g transform="translate(124.52,31.73)">
+    <path fill="none" d="M-4.63,-10.56 L4.63,10.56 " class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-b0d55cf7-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-767129ea-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-b0d55cf7-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-767129ea-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-b0d55cf7-4">
-  <g transform="translate(94.46,30.09)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-767129ea-4">
+  <g transform="translate(88.8,65.88)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(53.62,91.67)" fill="#2E8B57">
+  <g transform="translate(11.79,25.74)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,44.9)" fill="#2E8B57">
+  <g transform="translate(118.24,17.41)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(13.54,80.14)" fill="#00CDCD">
+  <g transform="translate(57.91,8.33)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(88.09,68.69)" fill="#00CDCD">
+  <g transform="translate(28.12,51.37)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(48.16,24.06)" fill="#00CDCD">
+  <g transform="translate(129.64,43.42)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,8.33)" fill="#00CDCD">
+  <g transform="translate(102.66,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-b0d55cf7-5">
-  <g transform="translate(94.46,30.09)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-767129ea-5">
+  <g transform="translate(88.8,65.88)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(53.62,91.67)">
+  <g transform="translate(11.79,25.74)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(11.79,44.9)">
+  <g transform="translate(118.24,17.41)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(13.54,80.14)">
+  <g transform="translate(57.91,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(88.09,68.69)">
+  <g transform="translate(28.12,51.37)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(48.16,24.06)">
+  <g transform="translate(129.64,43.42)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,8.33)">
+  <g transform="translate(102.66,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -299,4 +299,4 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 └ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:658
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.12 on <span class="colophon-date" title="Wednesday 23 February 2022 18:49">Wednesday 23 February 2022</span>. Using Julia version 1.7.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.15 on <span class="colophon-date" title="Sunday 27 March 2022 06:51">Sunday 27 March 2022</span>. Using Julia version 1.7.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
