--- a/dev/DrawingGraphs/index.html
+++ b/dev/DrawingGraphs/index.html
@@ -24,94 +24,94 @@ plotDFG(dfg)</code></pre><?xml version="1.0" encoding="UTF-8"?>
      stroke-width="0.3"
      font-size="3.88"
 
-     id="img-6e87d6dd">
+     id="img-f290547c">
 <defs>
   <marker id="arrow" markerWidth="15" markerHeight="7" refX="5" refY="3.5" orient="auto" markerUnits="strokeWidth">
     <path d="M0,0 L15,3.5 L0,7 z" stroke="context-stroke" fill="context-stroke"/>
   </marker>
 </defs>
-<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-6e87d6dd-1">
-  <g transform="translate(46.7,57.19)">
-    <path fill="none" d="M25.99,8 L-25.99,-8 " class="primitive"/>
+<g stroke-width="1.13" fill="#000000" fill-opacity="0.000" stroke="#D3D3D3" id="img-f290547c-1">
+  <g transform="translate(60.47,34.6)">
+    <path fill="none" d="M-11.21,18.57 L11.21,-18.57 " class="primitive"/>
   </g>
-  <g transform="translate(105.42,55.94)">
-    <path fill="none" d="M-22.75,8.91 L22.75,-8.91 " class="primitive"/>
+  <g transform="translate(63.03,75.4)">
+    <path fill="none" d="M-13.07,-15.25 L13.07,15.25 " class="primitive"/>
   </g>
-  <g transform="translate(80.24,80.58)">
-    <path fill="none" d="M-1.75,-9.91 L1.75,9.91 " class="primitive"/>
+  <g transform="translate(27.51,59.31)">
+    <path fill="none" d="M14.08,-1.82 L-14.08,1.82 " class="primitive"/>
   </g>
-  <g transform="translate(41.45,15.32)">
-    <path fill="none" d="M-24.46,6.57 L24.46,-6.57 " class="primitive"/>
+  <g transform="translate(119.45,28.58)">
+    <path fill="none" d="M-9.55,-16.6 L9.55,16.6 " class="primitive"/>
   </g>
-  <g transform="translate(15.88,37.35)">
-    <path fill="none" d="M-2.97,-10.21 L2.97,10.21 " class="primitive"/>
+  <g transform="translate(88.19,11.99)">
+    <path fill="none" d="M14.23,-2.65 L-14.23,2.65 " class="primitive"/>
   </g>
-  <g transform="translate(95.88,14.24)">
-    <path fill="none" d="M26.8,5.57 L-26.8,-5.57 " class="primitive"/>
+  <g transform="translate(121.69,66.4)">
+    <path fill="none" d="M-7.5,18.98 L7.5,-18.98 " class="primitive"/>
   </g>
-  <g transform="translate(128.92,35.07)">
-    <path fill="none" d="M-0.64,-10.22 L0.64,10.22 " class="primitive"/>
+  <g transform="translate(92.89,90.56)">
+    <path fill="none" d="M14.26,-1 L-14.26,1 " class="primitive"/>
   </g>
 </g>
-<g stroke-width="1.13" stroke="#D3D3D3" id="img-6e87d6dd-2">
+<g stroke-width="1.13" stroke="#D3D3D3" id="img-f290547c-2">
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-6e87d6dd-3">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-f290547c-3">
 </g>
-<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-6e87d6dd-4">
-  <g transform="translate(77.79,66.76)" fill="#2E8B57">
+<g stroke-width="0" stroke="#000000" stroke-opacity="0.000" id="img-f290547c-4">
+  <g transform="translate(47.07,56.78)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(11.79,23.29)" fill="#2E8B57">
+  <g transform="translate(107.8,8.33)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(128.03,20.92)" fill="#2E8B57">
+  <g transform="translate(112.69,89.17)" fill="#2E8B57">
     <circle cx="0" cy="0" r="5.35" class="primitive"/>
   </g>
-  <g transform="translate(67.47,8.33)" fill="#00CDCD">
+  <g transform="translate(129.64,46.27)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(19.18,48.72)" fill="#00CDCD">
+  <g transform="translate(72.34,14.95)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(129.64,46.46)" fill="#00CDCD">
+  <g transform="translate(76.97,91.67)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
-  <g transform="translate(82.2,91.67)" fill="#00CDCD">
+  <g transform="translate(11.79,61.34)" fill="#00CDCD">
     <circle cx="0" cy="0" r="1.6" class="primitive"/>
   </g>
 </g>
-<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-6e87d6dd-5">
-  <g transform="translate(77.79,66.76)">
+<g font-size="4" stroke="#000000" stroke-opacity="0.000" fill="#000000" id="img-f290547c-5">
+  <g transform="translate(47.07,56.78)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x0</text>
     </g>
   </g>
-  <g transform="translate(11.79,23.29)">
+  <g transform="translate(107.8,8.33)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">x1</text>
     </g>
   </g>
-  <g transform="translate(128.03,20.92)">
+  <g transform="translate(112.69,89.17)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em">l0</text>
     </g>
   </g>
-  <g transform="translate(67.47,8.33)">
+  <g transform="translate(129.64,46.27)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(19.18,48.72)">
+  <g transform="translate(72.34,14.95)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(129.64,46.46)">
+  <g transform="translate(76.97,91.67)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
   </g>
-  <g transform="translate(82.2,91.67)">
+  <g transform="translate(11.79,61.34)">
     <g class="primitive">
       <text text-anchor="middle" dy="0.35em"></text>
     </g>
@@ -295,8 +295,14 @@ toDotFile(dfg, &quot;/tmp/test.dot&quot;)
 [ Info: try doautoinit! of l0
 [ Info: init with useinitfct [:l0x0f1]
 [ Info: do init of l0
+┌ Warning: CommonConvWrapper.threadmodel is obsolete
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/rKAZy/src/Deprecated.jl:33
+┌ Warning: CommonConvWrapper.threadmodel is obsolete
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/rKAZy/src/Deprecated.jl:33
+┌ Warning: CommonConvWrapper.threadmodel is obsolete
+└ @ IncrementalInference ~/.julia/packages/IncrementalInference/rKAZy/src/Deprecated.jl:33
 ┌ Warning: updateVariableSolverData with solveKey parameter might change in the future, see DFG #565. Future warnings are suppressed
 └ @ DistributedFactorGraphs ~/work/DistributedFactorGraphs.jl/DistributedFactorGraphs.jl/src/services/DFGVariable.jl:659
 [ Info: try doautoinit! of x1
 [ Info: init with useinitfct [:x0x1f1, :l0x1f1]
-[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Wednesday 28 December 2022 07:52">Wednesday 28 December 2022</span>. Using Julia version 1.8.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+[ Info: do init of x1</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../GraphData/">« Using Graph Elements</a><a class="docs-footer-nextpage" href="../ref_api/">Quick API Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.23 on <span class="colophon-date" title="Monday 2 January 2023 05:16">Monday 2 January 2023</span>. Using Julia version 1.8.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
